# just-talk

./: .gitignore  Makefile  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-desktop.yml
docs/: PRODUCT_DECISIONS.md
packaging/arch/: PKGBUILD  justtalk.desktop
packaging/linux/: com.justtalk.slim.desktop
src/: main.ts  overlay.css  overlay.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  hotkey.rs  lib.rs  main.rs  media.rs  permissions.rs  protocol.rs  session.rs
