[package]
name = "just-talk-slim"
version = "0.1.1"
description = "A lightweight global speech input app"
authors = ["Just Talk contributors"]
edition = "2024"

[lib]
name = "just_talk_slim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
cpal = "0.18.1"
dirs = "6.0.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
http = "1.3.1"
parking_lot = "0.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri = { version = "2.11.5", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-global-shortcut = "2.3.2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
uuid = { version = "1.18.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
media-remote = { version = "0.5.2", default-features = false }
objc2 = "0.6.2"
block2 = "0.6.2"
objc2-av-foundation = { version = "0.3.2", features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGEvent", "CGEventTypes", "CGRemoteOperation"] }
objc2-foundation = "0.3.1"

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Foundation", "Foundation_Collections", "Media_Control"] }
